Fix: align logo left and right-nav-item to right
ul-flex-space-between!!
right-nav children displayed flex on the right side,

--- a/style.css
+++ b/style.css
@@ -19,11 +19,17 @@ body {
 
 ul {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100px;
     padding-right: 20px;
+}
+
+.right-nav-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 li {
